# sunfish4

./: .gitignore  Makefile  README.en.md  README.md  circle.yml  sunfish_ln
.circleci/: config.yml
.github/workflows/: test.yaml
config/: batch_learn.ini  csa.ini  ec2_ln  ec2_test  ec2rc  online_learn.ini
kifu/learn/pro10/: kifu09136.csa  kifu10616.csa  kifu11058.csa  kifu15093.csa  kifu17409.csa  kifu20023.csa  kifu25654.csa  kifu29397.csa  kifu32335.csa  kifu47094.csa
kifu/problem/: problem001.csa  problem002.csa  problem003.csa  problem004.csa  problem005.csa  problem006.csa  problem007.csa  problem008.csa  problem009.csa  problem010.csa  problem011.csa  problem012.csa  problem013.csa  problem014.csa  problem015.csa  problem016.csa  problem017.csa  problem018.csa  problem019.csa  problem020.csa  problem021.csa  problem022.csa  problem023.csa  problem024.csa  problem025.csa  problem026.csa  problem027.csa  problem028.csa  problem029.csa  problem030.csa  problem031.csa  problem032.csa
kifu/prof1/: kifu1.csa
kifu/prof5/: kifu1.csa  kifu2.csa  kifu3.csa  kifu4.csa  kifu5.csa
kifu/test/book_gen/: kifu001.csa  kifu002.csa  kifu003.csa
res/strings/: csa_log_path  learn_log_path  usi_author  usi_log_path  usi_name
src/: Common.cmake
src/app/: CMakeLists.txt  Def.hpp  Main.cpp  main.cpp
src/benchmark/: Benchmark.hpp  CMakeLists.txt  CMakeSettings.json  Main.cpp
src/benchmark/core/: MoveGeneratorBM.cpp  PositionBM.cpp
src/benchmark/search/: EvaluatorBM.cpp
src/book/: Book.cpp  Book.hpp  BookGenerator.cpp  BookGenerator.hpp  BookUtil.hpp  CMakeLists.txt
src/common/: CMakeLists.txt  Def.hpp
src/common/bitope/: BitOpe.hpp
src/common/console/: Console.hpp
src/common/file/: FileList.cpp  FileList.hpp
src/common/file_system/: Directory.cpp  Directory.hpp  FileUtil.cpp  FileUtil.hpp
src/common/math/: Random.cpp  Random.hpp
src/common/memory/: Memory.hpp
src/common/program_options/: ProgramOptions.hpp
src/common/resource/: Resource.cpp  Resource.hpp
src/common/string/: StringUtil.hpp  TablePrinter.hpp  Wildcard.cpp  Wildcard.hpp
src/common/thread/: ScopedThread.hpp
src/common/time/: Timer.hpp
src/common/util/: StringUtil.hpp
src/common/wildcard/: Wildcard.hpp
src/core/: CMakeLists.txt  Def.hpp  Sse.hpp
src/core/base/: Piece.cpp  Piece.hpp  Square.cpp  Square.hpp  Turn.hpp
src/core/move/: Move.cpp  Move.hpp  MoveGenerator.cpp  MoveGenerator.hpp  MoveTables.cpp  MoveTables.hpp  Moves.cpp  Moves.hpp
src/core/position/: Bitboard.cpp  Bitboard.hpp  Bitset128.hpp  Bitset64.hpp  Hand.hpp  Position.cpp  Position.hpp  Zobrist.cpp  Zobrist.hpp
src/core/record/: CsaReader.cpp  CsaReader.hpp  CsaWriter.cpp  CsaWriter.hpp  KifuWriter.cpp  KifuWriter.hpp  Record.cpp  Record.hpp  SfenParser.cpp  SfenParser.hpp
src/core/util/: CoreUtil.hpp  PositionUtil.hpp
src/csa/: CMakeLists.txt  CMakeSettings.json  Main.cpp
src/csa/client/: CsaClient.cpp  CsaClient.hpp  Socket.cpp  Socket.hpp
src/cui/: Def.hpp  ProgramOptions.hpp
src/dev/: CMakeLists.txt  CMakeSettings.json  Main.cpp
src/dev/code_generator/: CodeGenerator.hpp  ZobristCodeGenerator.cpp  ZobristCodeGenerator.hpp
src/dev/conv_eval/: ConvertEvalBin.cpp  ConvertEvalBin.hpp
src/expt/: CMakeLists.txt  CMakeSettings.json  Main.cpp
src/expt/mgtest/: MoveGenerationTest.cpp  MoveGenerationTest.hpp  TardyMoveGenerator.cpp  TardyMoveGenerator.hpp
src/expt/solve/: Solver.cpp  Solver.hpp
src/learn/: CMakeLists.txt  CMakeSettings.json  Main.cpp
src/learn/batch/: BatchLearning.cpp  BatchLearning.hpp  Gradient.cpp  Gradient.hpp
src/learn/gradient/: Gradient.cpp
src/learn/online/: OnlineLearning.cpp  OnlineLearning.hpp
src/learn/training_data/: TrainingData.cpp  TrainingData.hpp
src/learn/util/: LearningUtil.cpp  LearningUtil.hpp
src/logger/: CMakeLists.txt  Logger.cpp  Logger.hpp
src/search/: CMakeLists.txt  Param.hpp  RandomSearcher.cpp  RandomSearcher.hpp  SearchConfig.hpp  SearchHandler.cpp  SearchHandler.hpp  SearchInfo.cpp  SearchInfo.hpp  SearchResult.hpp  Searcher.cpp  Searcher.hpp
src/search/eval/: EvalCache.hpp  Evaluator.cpp  Evaluator.hpp  FeatureTemplates.hpp  FeatureVector.cpp  FeatureVector.hpp  Gain.hpp  Material.cpp  Material.hpp  Score.hpp  Value.hpp
src/search/history/: History.hpp
src/search/mate/: Mate.cpp  Mate.hpp
src/search/see/: SEE.cpp  SEE.hpp
src/search/shek/: HandSet.hpp  SCRDetector.cpp  SCRDetector.hpp  ShekElement.hpp  ShekSlots.hpp  ShekState.hpp  ShekTable.hpp
src/search/table/: HashTable.hpp
src/search/time/: TimeManager.cpp  TimeManager.hpp
src/search/tree/: ErrorCounter.cpp  ErrorCounter.hpp  Measure.cpp  Measure.hpp  Node.cpp  Node.hpp  NodeStat.hpp  PV.hpp  Tree.cpp  Tree.hpp  Worker.cpp  Worker.hpp
src/search/tt/: TT.hpp  TTElement.cpp  TTElement.hpp  TTSlots.cpp  TTSlots.hpp
src/search/util/: SearchUtil.hpp
src/test/: CMakeLists.txt  CMakeSettings.json  Main.cpp  Test.hpp  main.cpp
src/test/book/: BookGeneratorTest.cpp  BookTest.cpp
src/test/common/: RandomTest.cpp
src/test/core/: BitboardTest.cpp  CsaReaderTest.cpp  CsaWriterTest.cpp  KifuWriterTest.cpp  MoveGeneratorTest.cpp  MoveTablesTest.cpp  MoveTest.cpp  MovesTest.cpp  PieceTest.cpp  PositionTest.cpp  SfenParserTest.cpp  SquareTest.cpp
src/test/search/: EvaluatorTest.cpp  FeatureVectorTest.cpp  History.cpp  HistoryTest.cpp  MateTest.cpp  MaterialTest.cpp  SCRDetectorTest.cpp  SEETest.cpp  ScoreTest.cpp  ShekTest.cpp  TTTest.cpp  TimeManagerTest.cpp  TreeTest.cpp
src/tools/: CMakeLists.txt  CMakeSettings.json  Main.cpp
src/tools/csa2kifu/: Csa2Kifu.cpp  Csa2Kifu.hpp
src/tools/sfen2csa/: Sfen2Csa.cpp  Sfen2Csa.hpp
src/usi/: CMakeLists.txt  CMakeSettings.json  Main.cpp
src/usi/client/: .UsiClient.cpp.swp  UsiClient.cpp  UsiClient.hpp
tools/: csa2kif.sh  ec2_ln_download.sh  ec2_ln_login.sh  ec2_ln_setup.sh  ec2_test_login.sh  ec2_test_setup.sh  gen_cov_report.py  group_prof.pl  ln_backup.sh  test_backup.sh  usiToCsa.sh
